--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,12 +4,16 @@
     </head>
     <body>
         <div>
-            <H1>
-                <em>John's Blog</em>
-            </H1>
-            <br />
-            <p>Hi there!</p>
-            <p>It works!</p>
+            <h1><a href="">John's Blog</a></h1>
         </div>
+
+        {% for post in posts %}
+            <div>
+                <h1><a href="">{{ post.title }}</a></h1>
+                <p>{{ post.text|linebreaks }}</p>
+                <p>published: {{ post.published_date }}</p>
+            </div>
+        {% endfor %}
+
     </body>
 </html>
